# AI-Engineer-from-scrach

./: .gitignore  Readme.md
00-大纲/: Agent教学大纲.md
01-Agent/: 00-llm_function_call.py  README.md
03-memory/: 01-windowed_memory.ipynb  02_long_term_memory.ipynb  03_summary_memory.ipynb  04_three_factor_scoring.ipynb  requirements.txt
06-harnes/harness-engineering-demo/app/backend/: .env.example  e2e_check.py  pyproject.toml
06-harnes/harness-engineering-demo/app/backend/alembic/: env.py
06-harnes/harness-engineering-demo/app/backend/alembic/versions/: 6298a0455a0c_initial_schema.py  c85ad30d08de_add_contact_fields_and_contact_meeting_.py
06-harnes/harness-engineering-demo/app/backend/app/: config.py  database.py  main.py  seed.py
06-harnes/harness-engineering-demo/app/backend/app/api/: routes_auth.py  routes_availability.py  routes_contacts.py  routes_meetings.py  routes_teams.py
06-harnes/harness-engineering-demo/app/backend/app/models/: __init__.py  availability.py  contact.py  meeting.py  team.py  user.py
06-harnes/harness-engineering-demo/app/backend/app/schemas/: __init__.py  auth.py  availability.py  contact.py  meeting.py  team.py
06-harnes/harness-engineering-demo/app/backend/app/services/: auth_jwt.py  auth_legacy.py  export_service.py  meeting_service.py  security.py
06-harnes/harness-engineering-demo/app/backend/app/tests/: conftest.py  test_auth.py  test_availability.py  test_contacts.py  test_export.py  test_meetings.py  test_teams.py  test_timezone.py
06-harnes/harness-engineering-demo/app/backend/app/utils/: misc.py  timezones.py
(+528 files in other folders)
